--- a/index.html
+++ b/index.html
@@ -42,17 +42,17 @@
 <div>
   <h2>Testimonials</h2>
     <h4>Name:</h4>
-      <p>Jack Jones</p>
+      <p class="test">Jack Jones</p>
     <h4>Comment:</h4>
-      </p> I Fusce ornare ut sem sed congue. Aliquam volutpat, nulla in elementum blandit, mauris lacus molestie erat, a tempor arcu felis a neque.</p>
+      <p class="test"> I Fusce ornare ut sem sed congue. Aliquam volutpat, nulla in elementum blandit, mauris lacus molestie erat, a tempor arcu felis a neque.</p>
     <h4>Name:</h4>
-      <p>Elizabeth Swan</p>
+      <p class="test">Elizabeth Swan</p>
     <h4>Comment:</h4>
-      </p> I Fusce ornare ut sem sed congue. Aliquam volutpat, nulla in elementum blandit, mauris lacus molestie erat, a tempor arcu felis a neque.</p>
+      <p class="test"> I Fusce ornare ut sem sed congue. Aliquam volutpat, nulla in elementum blandit, mauris lacus molestie erat, a tempor arcu felis a neque.</p>
     <h4>Name:</h4>
     <h4>Comment:</h4>
 </div>
-<div>
+<div class="info">
   <h2>Info</h2>
     <h3>Contact Us</h3>
       <p>613-839-6666<p>
@@ -63,7 +63,7 @@
         <dt>Monday-Thursday</dt><dd>8:30am-6pm</dd>
         <dt>Friday</dt><dd>8:30am-8pm</dd>
         <dt>Saturday</dt><dd>8:30am-6pm</dd>
-        <dt>Sunday</dt><dd>Closed></dd>
+        <dt>Sunday</dt><dd>Closed</dd>
       </dl>
 </div>
 </main>
