--- a/index.html
+++ b/index.html
@@ -20,27 +20,26 @@
 </header>
 <main>
 <div>
-  <img scr=" " alt=" ">
-    <h2>Welcome</h2>
-      <p>Phasellus consectetur velit sed nunc viverra faucibus. Maecenas mi metus, porta at auctor id, interdum sed nisl. Nunc venenatis rutrum fermentum. Maecenas mi metus, porta at auctor id, interdum sed nisl. Integer quis tortor suscipit, tincidunt ante euismod, egestas lectus. Nunc venenatis rutrum fermentum.</p>
+  <img scr="images/layout.jpg" alt="close up of pastries with bakery seating in background">
+    <p>Phasellus consectetur velit sed nunc viverra faucibus. Maecenas mi metus, porta at auctor id, interdum sed nisl. Nunc venenatis rutrum fermentum. Maecenas mi metus, porta at auctor id, interdum sed nisl. Integer quis tortor suscipit, tincidunt ante euismod, egestas lectus. Nunc venenatis rutrum fermentum.</p>
 </div>
 <div>
-  <h2>Our Products</h2>
-    <img scr=" " alt="image of bread">
+  <h2 id="products">Our Products</h2>
+    <img scr="images/buns.jpg" alt="image of bread">
       <h3>Breads</h3>
         <p>Maecenas mi metus, porta at auctor id, interdum sed nisl. Integer quis  egestas lectus. Nunc venenatis rutrum fermentum. Nunc venenatis rutrum fermentum.</p>
-    <img scr=" " alt="image of cookie and muffins">
+    <img scr="images/cookies.jpg" alt="image of cookie and muffins">
       <h3>Cookies/Muffins</h3>
         <p>Maecenas mi metus, porta at auctor id, interdum sed nisl. Integer quis  egestas lectus. Nunc venenatis rutrum fermentum. Nunc venenatis rutrum fermentum.</p>
-    <img scr=" " alt="image of pastries">
+    <img scr="images/pastries.jpg" alt="image of pastries">
       <h3>Pastries</h3>
         <p>Maecenas mi metus, porta at auctor id, interdum sed nisl. Integer quis  egestas lectus. Nunc venenatis rutrum fermentum. Nunc venenatis rutrum fermentum.</p>
-    <img scr=" " alt="image of sandwhichs">
+    <img scr="image/sandwhich.jpg" alt="image of sandwhichs">
       <h3>Soups and Sandwhichs</h3>
         <p>Maecenas mi metus, porta at auctor id, interdum sed nisl. Integer quis  egestas lectus. Nunc venenatis rutrum fermentum. Nunc venenatis rutrum fermentum.</p>
 </div>
 <div>
-  <h2>Testimonials</h2>
+  <h2 id="testimonials">Testimonials</h2>
     <h4>Name:</h4>
       <p class="test">Jack Jones</p>
     <h4>Comment:</h4>
@@ -53,7 +52,7 @@
     <h4>Comment:</h4>
 </div>
 <div class="info">
-  <h2>Info</h2>
+  <h2 id="info">Info</h2>
     <h3>Contact Us</h3>
       <p>613-839-6666<p>
     <h3>Our Location</h3>
