--- a/index.html
+++ b/index.html
@@ -20,21 +20,21 @@
 </header>
 <main>
 <div>
-  <img scr="images/layout.jpg" alt="close up of pastries with bakery seating in background">
+  <img src="images/layout.jpg" alt="close up of pastries with bakey seating in background">
     <p>Phasellus consectetur velit sed nunc viverra faucibus. Maecenas mi metus, porta at auctor id, interdum sed nisl. Nunc venenatis rutrum fermentum. Maecenas mi metus, porta at auctor id, interdum sed nisl. Integer quis tortor suscipit, tincidunt ante euismod, egestas lectus. Nunc venenatis rutrum fermentum.</p>
 </div>
 <div>
   <h2 id="products">Our Products</h2>
-    <img scr="images/buns.jpg" alt="image of bread">
+    <img src="images/buns.jpg" alt="image of fresh buns">
       <h3>Breads</h3>
         <p>Maecenas mi metus, porta at auctor id, interdum sed nisl. Integer quis  egestas lectus. Nunc venenatis rutrum fermentum. Nunc venenatis rutrum fermentum.</p>
-    <img scr="images/cookies.jpg" alt="image of cookie and muffins">
+    <img src="images/cookies.jpg" alt="image of cookies">
       <h3>Cookies/Muffins</h3>
         <p>Maecenas mi metus, porta at auctor id, interdum sed nisl. Integer quis  egestas lectus. Nunc venenatis rutrum fermentum. Nunc venenatis rutrum fermentum.</p>
-    <img scr="images/pastries.jpg" alt="image of pastries">
+    <img src="images/pastries.jpg" alt="image of pastries">
       <h3>Pastries</h3>
         <p>Maecenas mi metus, porta at auctor id, interdum sed nisl. Integer quis  egestas lectus. Nunc venenatis rutrum fermentum. Nunc venenatis rutrum fermentum.</p>
-    <img scr="image/sandwhich.jpg" alt="image of sandwhichs">
+    <img src="images/sandwhich.jpg" alt="image of sandwhich with melting cheese">
       <h3>Soups and Sandwhichs</h3>
         <p>Maecenas mi metus, porta at auctor id, interdum sed nisl. Integer quis  egestas lectus. Nunc venenatis rutrum fermentum. Nunc venenatis rutrum fermentum.</p>
 </div>
