--- a/index.html
+++ b/index.html
@@ -16,41 +16,48 @@
         <li><a href="#info">Info</a></li>
       </ol>
     </nav>
-  <h1>Fresh homemade treats everday!</h1>
 </header>
+
 <main>
-<div>
-  <img src="images/layout.jpg" alt="close up of pastries with bakey seating in background">
-    <p>Phasellus consectetur velit sed nunc viverra faucibus. Maecenas mi metus, porta at auctor id, interdum sed nisl. Nunc venenatis rutrum fermentum. Maecenas mi metus, porta at auctor id, interdum sed nisl. Integer quis tortor suscipit, tincidunt ante euismod, egestas lectus. Nunc venenatis rutrum fermentum.</p>
+<div class="banner">
+  <h1>Fresh homemade treats everday!</h1>
 </div>
-<div>
+<p>Phasellus consectetur velit sed nunc viverra faucibus. Maecenas mi metus, porta at auctor id, interdum sed nisl. Nunc venenatis rutrum fermentum. Maecenas mi metus, porta at auctor id, interdum sed nisl. Integer quis tortor suscipit, tincidunt ante euismod, egestas lectus. Nunc venenatis rutrum fermentum.</p>
+
+<div class="all">
   <h2 id="products">Our Products</h2>
-    <img src="images/buns.jpg" alt="image of fresh buns">
-      <h3>Breads</h3>
-        <p>Maecenas mi metus, porta at auctor id, interdum sed nisl. Integer quis  egestas lectus. Nunc venenatis rutrum fermentum. Nunc venenatis rutrum fermentum.</p>
-    <img src="images/cookies.jpg" alt="image of cookies">
-      <h3>Cookies/Muffins</h3>
-        <p>Maecenas mi metus, porta at auctor id, interdum sed nisl. Integer quis  egestas lectus. Nunc venenatis rutrum fermentum. Nunc venenatis rutrum fermentum.</p>
-    <img src="images/pastries.jpg" alt="image of pastries">
-      <h3>Pastries</h3>
-        <p>Maecenas mi metus, porta at auctor id, interdum sed nisl. Integer quis  egestas lectus. Nunc venenatis rutrum fermentum. Nunc venenatis rutrum fermentum.</p>
-    <img src="images/sandwhich.jpg" alt="image of sandwhich with melting cheese">
-      <h3>Soups and Sandwhichs</h3>
-        <p>Maecenas mi metus, porta at auctor id, interdum sed nisl. Integer quis  egestas lectus. Nunc venenatis rutrum fermentum. Nunc venenatis rutrum fermentum.</p>
+    <div class="bread">
+      <img src="images/buns.jpg" alt="image of fresh buns">
+        <h3>Breads</h3>
+          <p>Maecenas mi metus, porta at auctor id, interdum sed nisl. Integer quis  egestas lectus. Nunc venenatis rutrum fermentum. Nunc venenatis rutrum fermentum.</p>
+    </div>
+    <div class="cookies">
+      <img src="images/cookies.jpg" alt="image of cookies">
+        <h3>Cookies/Muffins</h3>
+          <p>Maecenas mi metus, porta at auctor id, interdum sed nisl. Integer quis  egestas lectus. Nunc venenatis rutrum fermentum. Nunc venenatis rutrum fermentum.</p>
+    </div>
+    <div class="pastries">
+      <img src="images/pastries.jpg" alt="image of pastries">
+        <h3>Pastries</h3>
+          <p>Maecenas mi metus, porta at auctor id, interdum sed nisl. Integer quis  egestas lectus. Nunc venenatis rutrum fermentum. Nunc venenatis rutrum fermentum.</p>
+    </div>
+    <div>
+      <img src="images/sandwhich.jpg" alt="image of sandwhich with melting cheese">
+        <h3>Soups and Sandwhichs</h3>
+          <p>Maecenas mi metus, porta at auctor id, interdum sed nisl. Integer quis  egestas lectus. Nunc venenatis rutrum fermentum. Nunc venenatis rutrum fermentum.</p>
+    </div>
 </div>
+
 <div>
   <h2 id="testimonials">Testimonials</h2>
-    <h4>Name:</h4>
-      <p class="test">Jack Jones</p>
-    <h4>Comment:</h4>
-      <p class="test"> I Fusce ornare ut sem sed congue. Aliquam volutpat, nulla in elementum blandit, mauris lacus molestie erat, a tempor arcu felis a neque.</p>
-    <h4>Name:</h4>
-      <p class="test">Elizabeth Swan</p>
-    <h4>Comment:</h4>
-      <p class="test"> I Fusce ornare ut sem sed congue. Aliquam volutpat, nulla in elementum blandit, mauris lacus molestie erat, a tempor arcu felis a neque.</p>
-    <h4>Name:</h4>
-    <h4>Comment:</h4>
+    <p class="name"><em>Name:</em> Jack Jones</p>
+    <p class="comment"><em>Comment:</em> I Fusce ornare ut sem sed congue. Aliquam volutpat, nulla in elementum blandit, mauris lacus molestie erat, a tempor arcu felis a neque.</p>
+    <p class="name"><em>Name:</em> Elizabeth Swan</p>
+    <p class="comment"><em>Comment:</em> I Fusce ornare ut sem sed congue. Aliquam volutpat, nulla in elementum blandit, mauris lacus molestie erat, a tempor arcu felis a neque.</p>
+    <p class="enter">Name:</p>
+    <p class="enter-2">Comment:</p>
 </div>
+
 <div class="info">
   <h2 id="info">Info</h2>
     <h3>Contact Us</h3>
