--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <link href='http://fonts.googleapis.com/css?family=Dosis:400,500,700' rel='stylesheet' type='text/css'>
 </head>
 <header>
-  <h2>Carp Bakery</h2>
+  <h2 id="back">Carp Bakery</h2>
     <nav>
       <ol>
         <li><a href="#products">Our Porducts</a></li>
@@ -22,7 +22,10 @@
 <div class="banner">
   <h1>Fresh homemade treats everday!</h1>
 </div>
+
+<div class="first">
 <p>Phasellus consectetur velit sed nunc viverra faucibus. Maecenas mi metus, porta at auctor id, interdum sed nisl. Nunc venenatis rutrum fermentum. Maecenas mi metus, porta at auctor id, interdum sed nisl. Integer quis tortor suscipit, tincidunt ante euismod, egestas lectus. Nunc venenatis rutrum fermentum.</p>
+</div>
 
 <div class="all">
   <h2 id="products">Our Products</h2>
@@ -41,14 +44,14 @@
         <h3>Pastries</h3>
           <p>Maecenas mi metus, porta at auctor id, interdum sed nisl. Integer quis  egestas lectus. Nunc venenatis rutrum fermentum. Nunc venenatis rutrum fermentum.</p>
     </div>
-    <div>
+    <div class="sandwhich">
       <img src="images/sandwhich.jpg" alt="image of sandwhich with melting cheese">
         <h3>Soups and Sandwhichs</h3>
           <p>Maecenas mi metus, porta at auctor id, interdum sed nisl. Integer quis  egestas lectus. Nunc venenatis rutrum fermentum. Nunc venenatis rutrum fermentum.</p>
     </div>
 </div>
 
-<div>
+<div class="test">
   <h2 id="testimonials">Testimonials</h2>
     <p class="name"><em>Name:</em> Jack Jones</p>
     <p class="comment"><em>Comment:</em> I Fusce ornare ut sem sed congue. Aliquam volutpat, nulla in elementum blandit, mauris lacus molestie erat, a tempor arcu felis a neque.</p>
@@ -74,5 +77,5 @@
 </div>
 </main>
 <footer>
-  <p>Back to Top</p>
+  <p><a href="#back">Back to Top</p>
 </footer>
