--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <link href='http://fonts.googleapis.com/css?family=Dosis:400,500,700' rel='stylesheet' type='text/css'>
 </head>
 <header>
-  <h2 id="back">Carp Bakery</h2>
+  <h2 class="carp" id="back">Carp Bakery</h2>
     <nav>
       <ol>
         <li><a href="#products">Our Porducts</a></li>
