fixed some tags
body tag missing
html wasn’t closed

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <link href="css/main.css" rel="stylesheet">
   <link href='http://fonts.googleapis.com/css?family=Dosis:400,500,700' rel='stylesheet' type='text/css'>
 </head>
+<body>
 <header>
   <h2 class="carp" id="back">Carp Bakery</h2>
     <nav>
@@ -79,3 +80,5 @@
 <footer>
   <p><a href="#back">Back to Top</p>
 </footer>
+</body>
+</html>
