font sizes done

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 </div>
 
 <div class="all">
-  <h2 id="products">Our Products</h2>
+  <h2 class="carp" id="products">Our Products</h2>
     <div class="bread">
       <img src="images/buns.jpg" alt="image of fresh buns">
         <h3>Breads</h3>
