--- a/index.html
+++ b/index.html
@@ -5,14 +5,14 @@
   <title>Carp Bakery</title>
   <meta name="viewport" content="width=device-width,intial-scale-1">
   <link href="css/main.css" rel="stylesheet">
-  <link href='http://fonts.googleapis.com/css?family=Dosis:400,500,700' rel='stylesheet' type='text/css'>
+  <link href='http://fonts.googleapis.com/css?family=Dancing+Script:400,700' rel='stylesheet' type='text/css'>
 </head>
 <body>
 <header>
   <h2 class="carp" id="back">Carp Bakery</h2>
     <nav>
       <ol>
-        <li><a href="#products">Our Porducts</a></li>
+        <li><a href="#products">Our Products</a></li>
         <li><a href="#testimonials">Testimonials</a></li>
         <li><a href="#info">Info</a></li>
       </ol>
