trying to make my boxes

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 </div>
 
 <div class="first">
-<p>Phasellus consectetur velit sed nunc viverra faucibus. Maecenas mi metus, porta at auctor id, interdum sed nisl. Nunc venenatis rutrum fermentum. Maecenas mi metus, porta at auctor id, interdum sed nisl. Integer quis tortor suscipit, tincidunt ante euismod, egestas lectus. Nunc venenatis rutrum fermentum.</p>
+<p>We take pride in bringing you the “traditional” taste of homemade breads, pastries and cakes. We use only the best quality ingredients, combined skill and love of baking, to create fresh, light, melt-in-your-mouth delicacies. We love what we do and want to share it with you!</p>
 </div>
 
 <div class="all">
@@ -33,33 +33,33 @@
     <div class="bread">
       <img src="images/buns.jpg" alt="image of fresh buns">
         <h3>Breads</h3>
-          <p>Maecenas mi metus, porta at auctor id, interdum sed nisl. Integer quis  egestas lectus. Nunc venenatis rutrum fermentum. Nunc venenatis rutrum fermentum.</p>
+          <p>There is an ample array of mouth-watering, light fluffy rolls, (whole wheat, diner, Kaiser), sliced bread (white, wheat, rye, raisin, cheese and cinnamon), and loaves (lemon, banana and cranberry orange). We also have breadcrumbs and croutons.</p>
     </div>
     <div class="cookies">
       <img src="images/cookies.jpg" alt="image of cookies">
-        <h3>Cookies/Muffins</h3>
-          <p>Maecenas mi metus, porta at auctor id, interdum sed nisl. Integer quis  egestas lectus. Nunc venenatis rutrum fermentum. Nunc venenatis rutrum fermentum.</p>
+        <h3>Cookies & Squares</h3>
+          <p>We carry a variety of delectable sweets to satisfy the sweet tooth: Nanaimo bars, butter tart squares, and cookies (oatmeal, peanut butter, oatmeal raisin, shortbread, and sugar).</p>
     </div>
     <div class="pastries">
       <img src="images/pastries.jpg" alt="image of pastries">
         <h3>Pastries</h3>
-          <p>Maecenas mi metus, porta at auctor id, interdum sed nisl. Integer quis  egestas lectus. Nunc venenatis rutrum fermentum. Nunc venenatis rutrum fermentum.</p>
+          <p>Our selection of sumptuous, baked-from-scratch pastries includes apple fritters, doughnuts (Boston cream, maple glazed chocolate glazed, jelly–filled) and a variety of muffins (cranberry, chocolate hip, carrot, and lemon poppy seed).</p>
     </div>
     <div class="sandwhich">
       <img src="images/sandwhich.jpg" alt="image of sandwhich with melting cheese">
-        <h3>Soups and Sandwhichs</h3>
-          <p>Maecenas mi metus, porta at auctor id, interdum sed nisl. Integer quis  egestas lectus. Nunc venenatis rutrum fermentum. Nunc venenatis rutrum fermentum.</p>
+        <h3>Soups & Sandwhichs</h3>
+          <p>If you are looking for a quick lunch, drop in for a hearty sandwich and homemade soup. Our soups and sandwiches are made fresh every morning and served piping hot for lunch. </p>
     </div>
 </div>
 
 <div class="test">
   <h2 id="testimonials">Testimonials</h2>
-    <p class="name"><em>Name:</em> Jack Jones</p>
-    <p class="comment"><em>Comment:</em> I Fusce ornare ut sem sed congue. Aliquam volutpat, nulla in elementum blandit, mauris lacus molestie erat, a tempor arcu felis a neque.</p>
-    <p class="name"><em>Name:</em> Elizabeth Swan</p>
-    <p class="comment"><em>Comment:</em> I Fusce ornare ut sem sed congue. Aliquam volutpat, nulla in elementum blandit, mauris lacus molestie erat, a tempor arcu felis a neque.</p>
-    <p class="enter">Name:</p>
-    <p class="enter-2">Comment:</p>
+    <p class="name"><em>Name:</em> Foodnatic (Amanda Stockham)</p>
+    <p class="comment"><em>Comment:</em> My experience with the donut from Carp Bakery was simply bliss!  It was SO soft and LIGHT. I can't wait to try the others!  That apple fritter has my name on it!</p>
+    <p class="name"><em>Name:</em> Fresh Foodie (Mark Warburton)</p>
+    <p class="comment"><em>Comment:</em> The Farmer Rolls are the epitome of fresh, white roll deliciousness. The texture is really airy fairy, but also with that delicious moistness that makes for excellent bread.</p>
+    <p class="enter"><em>Name:</em></p>
+    <p class="enter-2"><em>Comment:</em></p>
 </div>
 
 <div class="info">
