small changes and location added

--- a/index.html
+++ b/index.html
@@ -68,6 +68,7 @@
       <p>613-839-6666<p>
     <h3>Our Location</h3>
      <p>461 Donald B. Munro Drive Carp, Ontario K0A 1L0</p>
+     <img src="images/location.png" alt="location of carp bakery">
     <h3>Store Hours</h3>
       <dl>
         <dt>Monday-Thursday</dt><dd>8:30am-6pm</dd>
@@ -77,8 +78,10 @@
       </dl>
 </div>
 </main>
+
 <footer>
-  <p><a href="#back">Back to Top</p>
+  <p><a href="#back">Back to Top</a></p>
 </footer>
+
 </body>
 </html>
